--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "run-mock-server": "vite-node mock-server.ts | pino-pretty -c"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^17.0.0",
     "@hookform/resolvers": "^3.3.4",
     "@ngneat/falso": "^7.2.0",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -28,6 +29,7 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@tanstack/react-query": "^5.32.0",
     "@tanstack/react-query-devtools": "^5.32.0",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -38,12 +40,15 @@
     "marked": "^12.0.2",
     "nanoid": "^5.0.7",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
     "react-error-boundary": "^4.0.13",
     "react-helmet-async": "^2.0.4",
     "react-hook-form": "^7.51.3",
     "react-query-auth": "^2.3.0",
     "react-router-dom": "^6.23.0",
+    "react-select": "^5.8.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.4",
